force-app/main/default/objects/Application_Participation_Agreement__c/Application_Participation_Agreement__c.object-meta.xml
<CustomObject>
    <label>Application / Participation Agreement</label>
    <nameField>
        <displayFormat>KSA APP {000000000}</displayFormat>
        <label>Application / Participant #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application / Participation Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>