force-app/main/default/objects/Application_Participation_Agreement__c/fields/Approx_Female_Enrollment_9_12__c.field-meta.xml
<CustomField>
    <fullName>Approx_Female_Enrollment_9_12__c</fullName>
    <label>Approx.Female Enrollment (9-12)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>