force-app/main/default/objects/Application_Participation_Agreement__c/fields/Are_you_a_Boys_or_Girls_Team__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_Boys_or_Girls_Team__c</fullName>
    <label>Are you a Boys or Girls Team?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boys</fullName>
            </value>
            <value>
                <fullName>Girls</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>