force-app/main/default/objects/Application_Participation_Agreement__c/fields/Are_you_a_State_Member_School__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_State_Member_School__c</fullName>
    <label>Are you a State Member School?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>