force-app/main/default/objects/Application_Participation_Agreement__c/fields/Arrival_Day__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Day__c</fullName>
    <label>Arrival Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>