force-app/main/default/objects/Application_Participation_Agreement__c/fields/Athletic_Director__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Director__c</fullName>
    <label>Athletic Director</label>
    <length>80</length>
    <type>Text</type>
</CustomField>