force-app/main/default/objects/Application_Participation_Agreement__c/fields/Athletic_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Director_Email__c</fullName>
    <label>Athletic Director Email</label>
    <type>Email</type>
</CustomField>