force-app/main/default/objects/Application_Participation_Agreement__c/fields/Athletic_Director_Phone__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Director_Phone__c</fullName>
    <label>Athletic Director Phone</label>
    <type>Phone</type>
</CustomField>