force-app/main/default/objects/Application_Participation_Agreement__c/fields/Booster_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Booster_Contact_Email__c</fullName>
    <label>Booster Contact Email</label>
    <type>Email</type>
</CustomField>