force-app/main/default/objects/Application_Participation_Agreement__c/fields/Booster_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Booster_Contact_Phone__c</fullName>
    <label>Booster Contact Phone</label>
    <type>Phone</type>
</CustomField>