force-app/main/default/objects/Application_Participation_Agreement__c/fields/Booster_Contact_s__c.field-meta.xml
<CustomField>
    <fullName>Booster_Contact_s__c</fullName>
    <label>Booster Contact(s)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>