force-app/main/default/objects/Application_Participation_Agreement__c/fields/Bringing_your_Junior_Varsity_Team__c.field-meta.xml
<CustomField>
    <fullName>Bringing_your_Junior_Varsity_Team__c</fullName>
    <label>Bringing your Junior Varsity Team?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>