force-app/main/default/objects/Application_Participation_Agreement__c/fields/Championships_Notable_Honors__c.field-meta.xml
<CustomField>
    <fullName>Championships_Notable_Honors__c</fullName>
    <label>Championships/Notable Honors</label>
    <type>TextArea</type>
</CustomField>