force-app/main/default/objects/Application_Participation_Agreement__c/fields/Class_A_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_A_Level__c</fullName>
    <label>Class (A Level)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>