force-app/main/default/objects/Application_Participation_Agreement__c/fields/Coaches_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coaches_Cell_Phone__c</fullName>
    <label>Coaches Cell Phone</label>
    <type>Phone</type>
</CustomField>