force-app/main/default/objects/Application_Participation_Agreement__c/fields/Coaches_Email__c.field-meta.xml
<CustomField>
    <fullName>Coaches_Email__c</fullName>
    <label>Coaches Email</label>
    <type>Email</type>
</CustomField>