force-app/main/default/objects/Application_Participation_Agreement__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <label>Conference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>