force-app/main/default/objects/Application_Participation_Agreement__c/fields/Current_Season_Record__c.field-meta.xml
<CustomField>
    <fullName>Current_Season_Record__c</fullName>
    <label>Current Season Record</label>
    <length>10</length>
    <type>Text</type>
</CustomField>