force-app/main/default/objects/Application_Participation_Agreement__c/fields/Current_Total_School_Enrollment_9_12__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_School_Enrollment_9_12__c</fullName>
    <label>Current Total School Enrollment (9-12)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>