force-app/main/default/objects/Application_Participation_Agreement__c/fields/Day_2__c.field-meta.xml
<CustomField>
    <fullName>Day_2__c</fullName>
    <label>Day 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>