force-app/main/default/objects/Application_Participation_Agreement__c/fields/Day_3__c.field-meta.xml
<CustomField>
    <fullName>Day_3__c</fullName>
    <label>Day 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>