force-app/main/default/objects/Application_Participation_Agreement__c/fields/Day_4__c.field-meta.xml
<CustomField>
    <fullName>Day_4__c</fullName>
    <label>Day 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>