force-app/main/default/objects/Application_Participation_Agreement__c/fields/Freshman__c.field-meta.xml
<CustomField>
    <fullName>Freshman__c</fullName>
    <label># Freshman</label>
    <length>15</length>
    <type>Text</type>
</CustomField>