force-app/main/default/objects/Application_Participation_Agreement__c/fields/Has_your_team_traveled_before__c.field-meta.xml
<CustomField>
    <fullName>Has_your_team_traveled_before__c</fullName>
    <label>Has your team traveled before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>