force-app/main/default/objects/Application_Participation_Agreement__c/fields/Head_Coach__c.field-meta.xml
<CustomField>
    <fullName>Head_Coach__c</fullName>
    <label>Head Coach</label>
    <length>80</length>
    <type>Text</type>
</CustomField>