force-app/main/default/objects/Application_Participation_Agreement__c/fields/If_so_where__c.field-meta.xml
<CustomField>
    <fullName>If_so_where__c</fullName>
    <label>If so, where?</label>
    <type>TextArea</type>
</CustomField>