force-app/main/default/objects/Application_Participation_Agreement__c/fields/Juniors__c.field-meta.xml
<CustomField>
    <fullName>Juniors__c</fullName>
    <label># Juniors</label>
    <length>15</length>
    <type>Text</type>
</CustomField>