force-app/main/default/objects/Application_Participation_Agreement__c/fields/Last_Season_Record__c.field-meta.xml
<CustomField>
    <fullName>Last_Season_Record__c</fullName>
    <label>Last Season Record</label>
    <length>10</length>
    <type>Text</type>
</CustomField>