force-app/main/default/objects/Application_Participation_Agreement__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orlando</fullName>
            </value>
            <value>
                <fullName>Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Atlantis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>