force-app/main/default/objects/Application_Participation_Agreement__c/fields/Number_of_Field_Practices_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Field_Practices_Requested__c</fullName>
    <label>Number of Field Practices Requested:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>