force-app/main/default/objects/Application_Participation_Agreement__c/fields/Parent_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Parent_Coordinator__c</fullName>
    <label>Parent Coordinator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>