force-app/main/default/objects/Application_Participation_Agreement__c/fields/Parent_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Coordinator_Email__c</fullName>
    <label>Parent Coordinator Email</label>
    <type>Email</type>
</CustomField>