force-app/main/default/objects/Application_Participation_Agreement__c/fields/Parent_Coordinator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Coordinator_Phone__c</fullName>
    <label>Parent Coordinator Phone</label>
    <type>Phone</type>
</CustomField>