force-app/main/default/objects/Application_Participation_Agreement__c/fields/Principal_Email__c.field-meta.xml
<CustomField>
    <fullName>Principal_Email__c</fullName>
    <label>Principal Email</label>
    <type>Email</type>
</CustomField>