force-app/main/default/objects/Application_Participation_Agreement__c/fields/Principal_Phone__c.field-meta.xml
<CustomField>
    <fullName>Principal_Phone__c</fullName>
    <label>Principal Phone</label>
    <type>Phone</type>
</CustomField>