force-app/main/default/objects/Application_Participation_Agreement__c/fields/Printed_Name__c.field-meta.xml
<CustomField>
    <fullName>Printed_Name__c</fullName>
    <label>Printed Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>