force-app/main/default/objects/Application_Participation_Agreement__c/fields/Referral_Coach__c.field-meta.xml
<CustomField>
    <fullName>Referral_Coach__c</fullName>
    <label>Referral Coach</label>
    <length>80</length>
    <type>Text</type>
</CustomField>