force-app/main/default/objects/Application_Participation_Agreement__c/fields/Referral_Coach_Email__c.field-meta.xml
<CustomField>
    <fullName>Referral_Coach_Email__c</fullName>
    <label>Referral Coach Email</label>
    <type>Email</type>
</CustomField>