force-app/main/default/objects/Application_Participation_Agreement__c/fields/Referral_Coach_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referral_Coach_Phone__c</fullName>
    <label>Referral Coach Phone</label>
    <type>Phone</type>
</CustomField>