force-app/main/default/objects/Application_Participation_Agreement__c/fields/Referral_School__c.field-meta.xml
<CustomField>
    <fullName>Referral_School__c</fullName>
    <label>Referral School</label>
    <length>80</length>
    <type>Text</type>
</CustomField>