force-app/main/default/objects/Application_Participation_Agreement__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>