force-app/main/default/objects/Application_Participation_Agreement__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application / Participation Agreements</relationshipLabel>
    <relationshipName>Application_Participation_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>