force-app/main/default/objects/Application_Participation_Agreement__c/fields/Returning_Starters__c.field-meta.xml
<CustomField>
    <fullName>Returning_Starters__c</fullName>
    <label># Returning Starters</label>
    <length>15</length>
    <type>Text</type>
</CustomField>