force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_City__c.field-meta.xml
<CustomField>
    <fullName>School_City__c</fullName>
    <label>School City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>