force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Colors__c.field-meta.xml
<CustomField>
    <fullName>School_Colors__c</fullName>
    <label>School Colors</label>
    <length>80</length>
    <type>Text</type>
</CustomField>