force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Country__c.field-meta.xml
<CustomField>
    <fullName>School_Country__c</fullName>
    <label>School Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>