force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Fax__c.field-meta.xml
<CustomField>
    <fullName>School_Fax__c</fullName>
    <label>School Fax</label>
    <type>Phone</type>
</CustomField>