force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>School_Mailing_Address__c</fullName>
    <label>School Mailing Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>