force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Mascot__c.field-meta.xml
<CustomField>
    <fullName>School_Mascot__c</fullName>
    <label>School Mascot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>