force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <label>School Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Magnet</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>