force-app/main/default/objects/Application_Participation_Agreement__c/fields/School_Zip__c.field-meta.xml
<CustomField>
    <fullName>School_Zip__c</fullName>
    <label>School Zip</label>
    <length>6</length>
    <type>Text</type>
</CustomField>