force-app/main/default/objects/Application_Participation_Agreement__c/fields/Seniors__c.field-meta.xml
<CustomField>
    <fullName>Seniors__c</fullName>
    <label># Seniors</label>
    <length>15</length>
    <type>Text</type>
</CustomField>