force-app/main/default/objects/Application_Participation_Agreement__c/fields/Sophomores__c.field-meta.xml
<CustomField>
    <fullName>Sophomores__c</fullName>
    <label># Sophomores</label>
    <length>15</length>
    <type>Text</type>
</CustomField>